--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "purchaseapp",
   "version": "1.0.0",
+  "engines" : {
+    "node" : "6.10.2"
+  },
   "scripts": {
     "start": "tsc && concurrently \"tsc -w\" \"lite-server\" ",
     "lite": "lite-server",
