--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "node" : "6.10.2"
   },
   "scripts": {
-    "start": "tsc && concurrently \"tsc -w\" \"lite-server\" ",
+    "start": "\"lite-server\" ",
     "lite": "lite-server",
     "tsc": "tsc",
     "tsc:w": "tsc -w"
